src/include/jme/jme.h

            int jme_lun_eclipse_how(double jd_ut, int flags, double *geopos, double *attr, char *error);
            int jme_lun_eclipse_when(double jd_start, int flags, int iflag, double *tret, int backward, char *error);
            int jme_lun_eclipse_when_loc(double jd_start, int flags, double *geopos, double *tret, double *attr, int backward, char *error);
            int jme_lun_occult_when_glob(double jd_start, int body, const char *starname, int flags, int iflag, double *tret, int backward, char *error);
            int jme_lun_occult_when_loc(double jd_start, int body, const char *starname, int flags, double *geopos, double *tret, double *attr, int backward, char *error);
            int jme_lun_occult_where(double jd_ut, int body, const char *starname, int flags, double *geopos, double *attr, char *error);
            void jme_matrix_identity(double *m);
            void jme_matrix_multiply(const double *a, const double *b, double *out);
            void jme_matrix_rotate_x(double angle_rad, double *m);
            void jme_matrix_rotate_y(double angle_rad, double *m);
            void jme_matrix_rotate_z(double angle_rad, double *m);
            void jme_matrix_transform_state(const double *m, const double *input, double *output);
            int jme_meeus_moon_state(double jd_et, double *results);
            int jme_meeus_planet_state(double jd_et, int body, double *results);
            int jme_meeus_sun_state(double jd_et, double *results);
            int jme_mooncross(double x2cross, double jd_ut, int flags, double *tret, char *error);
            int jme_mooncross_node(double jd_ut, int flags, double *tret, char *error);
            int jme_mooncross_node_ut(double jd_ut, int flags, double *tret, char *error);