lib/src/jme_bindings.dart


  late final _jme_lun_eclipse_howPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Double,
              ffi.Int,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Char>)>>('jme_lun_eclipse_how');
  late final _jme_lun_eclipse_how = _jme_lun_eclipse_howPtr.asFunction<
      int Function(double, int, ffi.Pointer<ffi.Double>,
          ffi.Pointer<ffi.Double>, ffi.Pointer<ffi.Char>)>();

  int jme_lun_eclipse_when(
    double jd_start,
    int flags,
    int iflag,
    ffi.Pointer<ffi.Double> tret,
    int backward,
    ffi.Pointer<ffi.Char> error,
  ) {
    return _jme_lun_eclipse_when(
      jd_start,
      flags,
      iflag,
      tret,
      backward,
      error,
    );
  }

  late final _jme_lun_eclipse_whenPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Double,
              ffi.Int,
              ffi.Int,
              ffi.Pointer<ffi.Double>,
              ffi.Int,
              ffi.Pointer<ffi.Char>)>>('jme_lun_eclipse_when');
  late final _jme_lun_eclipse_when = _jme_lun_eclipse_whenPtr.asFunction<
      int Function(double, int, int, ffi.Pointer<ffi.Double>, int,
          ffi.Pointer<ffi.Char>)>();

  int jme_lun_eclipse_when_loc(
    double jd_start,
    int flags,
    ffi.Pointer<ffi.Double> geopos,
    ffi.Pointer<ffi.Double> tret,
    ffi.Pointer<ffi.Double> attr,
    int backward,
    ffi.Pointer<ffi.Char> error,
  ) {
    return _jme_lun_eclipse_when_loc(
      jd_start,
      flags,
      geopos,
      tret,
      attr,
      backward,
      error,
    );
  }

  late final _jme_lun_eclipse_when_locPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Double,
              ffi.Int,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Double>,
              ffi.Int,
              ffi.Pointer<ffi.Char>)>>('jme_lun_eclipse_when_loc');
  late final _jme_lun_eclipse_when_loc =
      _jme_lun_eclipse_when_locPtr.asFunction<
          int Function(
              double,
              int,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Double>,
              int,
              ffi.Pointer<ffi.Char>)>();

  int jme_lun_occult_when_glob(
    double jd_start,
    int body,
    ffi.Pointer<ffi.Char> starname,
    int flags,
    int iflag,
    ffi.Pointer<ffi.Double> tret,
    int backward,
    ffi.Pointer<ffi.Char> error,
  ) {
    return _jme_lun_occult_when_glob(
      jd_start,
      body,
      starname,
      flags,
      iflag,
      tret,
      backward,
      error,
    );
  }

  late final _jme_lun_occult_when_globPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Double,
              ffi.Int,
              ffi.Pointer<ffi.Char>,
              ffi.Int,
              ffi.Int,
              ffi.Pointer<ffi.Double>,
              ffi.Int,
              ffi.Pointer<ffi.Char>)>>('jme_lun_occult_when_glob');
  late final _jme_lun_occult_when_glob =
      _jme_lun_occult_when_globPtr.asFunction<
          int Function(double, int, ffi.Pointer<ffi.Char>, int, int,
              ffi.Pointer<ffi.Double>, int, ffi.Pointer<ffi.Char>)>();

  int jme_lun_occult_when_loc(
    double jd_start,
    int body,
    ffi.Pointer<ffi.Char> starname,
    int flags,
    ffi.Pointer<ffi.Double> geopos,
    ffi.Pointer<ffi.Double> tret,
    ffi.Pointer<ffi.Double> attr,
    int backward,
    ffi.Pointer<ffi.Char> error,
  ) {
    return _jme_lun_occult_when_loc(
      jd_start,
      body,
      starname,
      flags,
      geopos,
      tret,
      attr,
      backward,
      error,
    );
  }

  late final _jme_lun_occult_when_locPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Double,
              ffi.Int,
              ffi.Pointer<ffi.Char>,
              ffi.Int,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Double>,
              ffi.Int,
              ffi.Pointer<ffi.Char>)>>('jme_lun_occult_when_loc');
  late final _jme_lun_occult_when_loc = _jme_lun_occult_when_locPtr.asFunction<
      int Function(
          double,
          int,
          ffi.Pointer<ffi.Char>,
          int,
          ffi.Pointer<ffi.Double>,
          ffi.Pointer<ffi.Double>,
          ffi.Pointer<ffi.Double>,
          int,
          ffi.Pointer<ffi.Char>)>();

  int jme_lun_occult_where(
    double jd_ut,
    int body,
    ffi.Pointer<ffi.Char> starname,
    int flags,
    ffi.Pointer<ffi.Double> geopos,
    ffi.Pointer<ffi.Double> attr,
    ffi.Pointer<ffi.Char> error,
  ) {
    return _jme_lun_occult_where(
      jd_ut,
      body,
      starname,
      flags,
      geopos,
      attr,
      error,
    );
  }

  late final _jme_lun_occult_wherePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Double,
              ffi.Int,
              ffi.Pointer<ffi.Char>,
              ffi.Int,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Char>)>>('jme_lun_occult_where');
  late final _jme_lun_occult_where = _jme_lun_occult_wherePtr.asFunction<
      int Function(
          double,
          int,
          ffi.Pointer<ffi.Char>,
          int,
          ffi.Pointer<ffi.Double>,
          ffi.Pointer<ffi.Double>,
          ffi.Pointer<ffi.Char>)>();

  void jme_matrix_identity(
    ffi.Pointer<ffi.Double> m,
  ) {
    return _jme_matrix_identity(
      m,
    );
  }

  late final _jme_matrix_identityPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Double>)>>(
          'jme_matrix_identity');
  late final _jme_matrix_identity = _jme_matrix_identityPtr
      .asFunction<void Function(ffi.Pointer<ffi.Double>)>();

  void jme_matrix_multiply(
    ffi.Pointer<ffi.Double> a,
    ffi.Pointer<ffi.Double> b,
    ffi.Pointer<ffi.Double> out,
  ) {
    return _jme_matrix_multiply(
      a,
      b,
      out,
    );
  }

  late final _jme_matrix_multiplyPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Double>, ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Double>)>>('jme_matrix_multiply');
  late final _jme_matrix_multiply = _jme_matrix_multiplyPtr.asFunction<
      void Function(ffi.Pointer<ffi.Double>, ffi.Pointer<ffi.Double>,
          ffi.Pointer<ffi.Double>)>();

  void jme_matrix_rotate_x(
    double angle_rad,
    ffi.Pointer<ffi.Double> m,
  ) {
    return _jme_matrix_rotate_x(
      angle_rad,
      m,
    );
  }

  late final _jme_matrix_rotate_xPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Double, ffi.Pointer<ffi.Double>)>>('jme_matrix_rotate_x');
  late final _jme_matrix_rotate_x = _jme_matrix_rotate_xPtr
      .asFunction<void Function(double, ffi.Pointer<ffi.Double>)>();

  void jme_matrix_rotate_y(
    double angle_rad,
    ffi.Pointer<ffi.Double> m,
  ) {
    return _jme_matrix_rotate_y(
      angle_rad,
      m,
    );
  }

  late final _jme_matrix_rotate_yPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Double, ffi.Pointer<ffi.Double>)>>('jme_matrix_rotate_y');
  late final _jme_matrix_rotate_y = _jme_matrix_rotate_yPtr
      .asFunction<void Function(double, ffi.Pointer<ffi.Double>)>();

  void jme_matrix_rotate_z(
    double angle_rad,
    ffi.Pointer<ffi.Double> m,
  ) {
    return _jme_matrix_rotate_z(
      angle_rad,
      m,
    );
  }

  late final _jme_matrix_rotate_zPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Double, ffi.Pointer<ffi.Double>)>>('jme_matrix_rotate_z');
  late final _jme_matrix_rotate_z = _jme_matrix_rotate_zPtr
      .asFunction<void Function(double, ffi.Pointer<ffi.Double>)>();

  void jme_matrix_transform_state(
    ffi.Pointer<ffi.Double> m,
    ffi.Pointer<ffi.Double> input,
    ffi.Pointer<ffi.Double> output,
  ) {
    return _jme_matrix_transform_state(
      m,
      input,
      output,
    );
  }

  late final _jme_matrix_transform_statePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Double>, ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Double>)>>('jme_matrix_transform_state');
  late final _jme_matrix_transform_state =
      _jme_matrix_transform_statePtr.asFunction<
          void Function(ffi.Pointer<ffi.Double>, ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Double>)>();

  int jme_meeus_moon_state(
    double jd_et,
    ffi.Pointer<ffi.Double> results,
  ) {
    return _jme_meeus_moon_state(
      jd_et,
      results,
    );
  }

  late final _jme_meeus_moon_statePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Double, ffi.Pointer<ffi.Double>)>>('jme_meeus_moon_state');
  late final _jme_meeus_moon_state = _jme_meeus_moon_statePtr
      .asFunction<int Function(double, ffi.Pointer<ffi.Double>)>();

  int jme_meeus_planet_state(
    double jd_et,
    int body,
    ffi.Pointer<ffi.Double> results,
  ) {
    return _jme_meeus_planet_state(
      jd_et,
      body,
      results,
    );
  }

  late final _jme_meeus_planet_statePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Double, ffi.Int,
              ffi.Pointer<ffi.Double>)>>('jme_meeus_planet_state');
  late final _jme_meeus_planet_state = _jme_meeus_planet_statePtr
      .asFunction<int Function(double, int, ffi.Pointer<ffi.Double>)>();

  int jme_meeus_sun_state(
    double jd_et,
    ffi.Pointer<ffi.Double> results,
  ) {
    return _jme_meeus_sun_state(
      jd_et,
      results,
    );
  }

  late final _jme_meeus_sun_statePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Double, ffi.Pointer<ffi.Double>)>>('jme_meeus_sun_state');
  late final _jme_meeus_sun_state = _jme_meeus_sun_statePtr
      .asFunction<int Function(double, ffi.Pointer<ffi.Double>)>();

  int jme_mooncross(
    double x2cross,
    double jd_ut,
    int flags,
    ffi.Pointer<ffi.Double> tret,
    ffi.Pointer<ffi.Char> error,
  ) {
    return _jme_mooncross(
      x2cross,
      jd_ut,
      flags,
      tret,
      error,
    );
  }

  late final _jme_mooncrossPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Double,
              ffi.Double,
              ffi.Int,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Char>)>>('jme_mooncross');
  late final _jme_mooncross = _jme_mooncrossPtr.asFunction<
      int Function(double, double, int, ffi.Pointer<ffi.Double>,
          ffi.Pointer<ffi.Char>)>();

  int jme_mooncross_node(
    double jd_ut,
    int flags,
    ffi.Pointer<ffi.Double> tret,
    ffi.Pointer<ffi.Char> error,
  ) {
    return _jme_mooncross_node(
      jd_ut,
      flags,
      tret,
      error,
    );
  }

  late final _jme_mooncross_nodePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Double, ffi.Int, ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Char>)>>('jme_mooncross_node');
  late final _jme_mooncross_node = _jme_mooncross_nodePtr.asFunction<
      int Function(
          double, int, ffi.Pointer<ffi.Double>, ffi.Pointer<ffi.Char>)>();

  int jme_mooncross_node_ut(
    double jd_ut,
    int flags,
    ffi.Pointer<ffi.Double> tret,
    ffi.Pointer<ffi.Char> error,
  ) {
    return _jme_mooncross_node_ut(
      jd_ut,
      flags,
      tret,
      error,
    );
  }

  late final _jme_mooncross_node_utPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Double, ffi.Int, ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Char>)>>('jme_mooncross_node_ut');
  late final _jme_mooncross_node_ut = _jme_mooncross_node_utPtr.asFunction<
      int Function(
          double, int, ffi.Pointer<ffi.Double>, ffi.Pointer<ffi.Char>)>();
